--- a/dev/styles/layout/_footer.scss
+++ b/dev/styles/layout/_footer.scss
@@ -28,6 +28,98 @@
     font-size: 14px;
     font-weight: 600;
     color: $title;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      background-image: url("../../img/envelope.svg");
+      width: 16px;
+      height: 12px;
+      top: 8px;
+      left: 0;
+    }
+  }
+  &__form{
+    display: flex;
+  }
+  &__form-input{
+    width: 100%;
+    padding: 6px 10px 6px 18px;
+    border: 1px solid rgba($title, .7);
+    border-radius: 21px;
+    background-color: transparent;
+    &::placeholder{
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 27px;
+      color: #A1A1A1;
+    }
+  }
+  &__form-btn{
+    min-width: 160px;
+    padding: 6px 12px;
+    margin-left: 9px;
+    border: none;
+    border-radius: 21px;
+    font-weight: 600;
+    background-color: $title;
+    color: #fffff0;
+    cursor: pointer;
+  }
+  &__social{
+    width: 125px;
+    margin-right: auto;
+    margin-left: 100px;
+  }
+  &__social-link{
+    padding-left: 28px;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &__social-link--facebook::before{
+    background-image: url("../../img/facebook.svg");
+  }
+  &__social-link--instagram::before{
+    background-image: url("../../img/instagram.svg");
+    width: 14px;
+    height: 14px;
+    top: 4px;
+  }
+  &__social-link--pinterest::before{
+    background-image: url("../../img/pinterest.svg");
+  }
+  &__social-link--whatsapp::before{
+    background-image: url("../../img/whatsapp.svg");
+    width: 14px;
+    height: 14px;
+  }
+  &__social-link--youtube::before{
+    background-image: url("../../img/youtube.svg");
+    width: 18px;
+    height: 12px;
+    top: 4px;
+  }
+  &__social-item,
+  &__menu-item{
+    margin-bottom: 15px;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  &__social-link,
+  &__menu-link{
+    color: #707070;
+  }
+  &__menu{
+    width: 125px;
+    margin-right: 60px;
   }
   &__copyright{
     padding: 42px 0 41px;
