--- a/dev/styles/layout/_header.scss
+++ b/dev/styles/layout/_header.scss
@@ -32,3 +32,46 @@
     color: rgba(54, 56, 56, 0.90);
   }
 }
+.rightside-menu{
+  position: absolute;
+  max-width: 694px;
+  width: 100%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  padding-top: 40px;
+  transition: 0.5s;
+  background-color: #fff;
+  &.rightside-menu--close{
+    transform: translateX(1000%);
+  }
+  &__close{
+    margin-left: 50px;
+    margin-bottom: 60px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  &__content{
+    max-width: 475px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  &__logo{
+    display: inline-block;
+    margin-bottom: 40px;
+  }
+  &__title{
+    @extend %title-font;
+    font-size: 36px;
+    line-height: 51px;
+    color: $title;
+  }
+  &__text{
+    margin-bottom: 75px;
+  }
+  &__image{
+    max-width: 485px;
+  }
+}
