--- a/dev/styles/layout/_main-page.scss
+++ b/dev/styles/layout/_main-page.scss
@@ -1,9 +1,9 @@
 .top {
-
-  &__inner{
+  &__inner {
     padding-bottom: 70px;
     position: relative;
-    &::after{
+
+    &::after {
       content: '';
       background-image: url("../../img/slider-bg.jpg");
       position: absolute;
@@ -13,29 +13,35 @@
       z-index: -1;
     }
   }
-  &__slider-item{
+
+  &__slider-item {
     display: flex !important;
     justify-content: center;
     align-items: center;
   }
-  &__slider-img{
+
+  &__slider-img {
     max-width: 703px;
     height: 815px;
     margin-left: -14%;
     object-fit: cover;
   }
-  &__slider-info{
+
+  &__slider-info {
     max-width: 645px;
     margin-left: 25px;
   }
-  &__slider-title{
+
+  &__slider-title {
+    @extend %title-font;
     position: relative;
     font-size: 110px;
     line-height: 135px;
     padding-bottom: 26px;
     margin-bottom: 26px;
     color: $title;
-    &::after{
+
+    &::after {
       content: '';
       position: absolute;
       left: 0;
@@ -45,7 +51,209 @@
       background: #6D7278;
     }
   }
-  &__slider-text{
+
+  &__slider-text {
     max-width: 585px;
+  }
+}
+
+.new-collection {
+  text-align: center;
+  padding: 45px 0 105px;
+
+  &__title {
+    @extend %title-font;
+    position: relative;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+    font-size: 36px;
+    line-height: 51px;
+    color: $title;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 250px;
+      height: 1px;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: #6D7278;
+    }
+  }
+
+  &__text {
+    max-width: 730px;
+    margin: 0 auto 30px;
+  }
+}
+
+.collection {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+
+  &__item {
+    position: relative;
+
+    &:hover {
+      .collection__info {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__image {
+    min-height: 350px;
+    object-fit: cover;
+  }
+
+  &__info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(#fff, 0.7);
+    padding: 10px;
+    opacity: 0;
+    transition: all .7s;
+  }
+
+  &__info-title {
+    @extend %title-font;
+    position: relative;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    font-size: 20px;
+    line-height: 25px;
+    color: $title;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 1px;
+      background-color: #6D7278;
+      width: 80%;
+    }
+  }
+
+  &__info-text {
+    font-size: 14px;
+    font-weight: 600;
+    color: #707070;
+  }
+}
+
+.decor {
+  padding: 170px 0 155px;
+  background-image: url("../../img/decor-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  &__title {
+    @extend %title-font;
+    position: relative;
+    max-width: 730px;
+    font-size: 60px;
+    line-height: 80px;
+    color: $title;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    &::after{
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 200px;
+      height: 1px;
+      background: #6D7278;
+
+    }
+  }
+
+  &__text {
+    max-width: 540px;
+  }
+}
+
+.works-path {
+  padding: 80px 0 30px;
+  &__title{
+    @extend %title-font;
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 36px;
+    line-height: 51px;
+    color: $title;
+  }
+  &__items-box{
+    display: flex;
+    align-items: flex-end;
+    border-bottom: 2px solid rgba($title, 0.7);
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -5px;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: $title;
+    }
+  }
+  &__item{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 250px;
+    height: 100%;
+  }
+    &__item-title{
+      @extend %title-font;
+      margin-left: 13px;
+      font-size: 16px;
+      line-height: 23px;
+      color: $title;
+    }
+  &__item--production{
+    margin-left: 317px;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 2px;
+      height: 20px;
+      background: rgba($title, 0.7);
+    }
+  }
+
+  &__item--measuring{
+    padding-top: 38px;
+    margin-left: 305px;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 2px;
+      height: 20px;
+      background: rgba($title, 0.7);
+    }
+  }
+  &__item-text{
+    margin-top: 13px;
+    padding-bottom: 38px;
   }
 }
