add gallery and blog-box task: build logic in gallery

--- a/dev/styles/layout/_header.scss
+++ b/dev/styles/layout/_header.scss
@@ -43,6 +43,7 @@
   transition: all .6s;
   background-color: #fff;
   box-shadow: -2px 3px 17px 0px #000;
+  z-index: 5;
   &.rightside-menu--close{
     transform: translateX(500%);
   }
