--- a/dev/styles/layout/_main-page.scss
+++ b/dev/styles/layout/_main-page.scss
@@ -168,7 +168,8 @@
     color: $title;
     padding-bottom: 22px;
     margin-bottom: 22px;
-    &::after{
+
+    &::after {
       content: '';
       position: absolute;
       left: 0;
@@ -187,7 +188,8 @@
 
 .works-path {
   padding: 80px 0 30px;
-  &__title{
+
+  &__title {
     @extend %title-font;
     text-align: center;
     margin-bottom: 40px;
@@ -195,12 +197,14 @@
     line-height: 51px;
     color: $title;
   }
-  &__items-box{
+
+  &__items-box {
     display: flex;
     align-items: flex-end;
     border-bottom: 2px solid rgba($title, 0.7);
     position: relative;
-    &::before{
+
+    &::before {
       content: '';
       position: absolute;
       left: 0;
@@ -211,7 +215,8 @@
       background-color: $title;
     }
   }
-  &__item{
+
+  &__item {
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -219,16 +224,19 @@
     width: 250px;
     height: 100%;
   }
-    &__item-title{
-      @extend %title-font;
-      margin-left: 13px;
-      font-size: 16px;
-      line-height: 23px;
-      color: $title;
-    }
-  &__item--production{
+
+  &__item-title {
+    @extend %title-font;
+    margin-left: 13px;
+    font-size: 16px;
+    line-height: 23px;
+    color: $title;
+  }
+
+  &__item--production {
     margin-left: 317px;
-    &::before{
+
+    &::before {
       content: '';
       position: absolute;
       left: 0;
@@ -239,10 +247,11 @@
     }
   }
 
-  &__item--measuring{
+  &__item--measuring {
     padding-top: 38px;
     margin-left: 305px;
-    &::before{
+
+    &::before {
       content: '';
       position: absolute;
       left: 0;
@@ -252,8 +261,94 @@
       background: rgba($title, 0.7);
     }
   }
-  &__item-text{
+
+  &__item-text {
     margin-top: 13px;
     padding-bottom: 38px;
+  }
+}
+
+.gallery {
+  padding: 80px 0 90px;
+
+  &__buttons {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  &__btn {
+    margin: 0 13px;
+    padding: 6px 16px;
+    font-size: 14px;
+    font-weight: 600;
+    border: 1px solid #454647;
+    border-radius: 20px;
+    color: #8F8D8D;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 35px;
+  }
+
+  &__item:first-child {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    max-height: 1148px;
+    object-fit: cover;
+  }
+}
+
+.blog-box {
+  padding-bottom: 100px;
+
+  &__title {
+    @extend %title-font;
+    max-width: 430px;
+    font-size: 36px;
+    line-height: 51px;
+    margin: 0 auto 30px;
+    text-align: center;
+    color: $title;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+  }
+
+  &__img-link {
+    display: inline-block;
+    margin-bottom: 19px;
+  }
+
+  &__links {
+    margin-bottom: 9px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #707070;
+  }
+
+  &__date,
+  &__athor,
+  &__theme {
+    color: inherit;
+  }
+
+  &__item-title {
+    @extend %title-font;
+    font-size: 24px;
+    line-height: 38px;
+    color: $title;
   }
 }
