--- a/dev/styles/pages/_main-page.scss
+++ b/dev/styles/pages/_main-page.scss
@@ -59,7 +59,7 @@
 
 .new-collection {
   text-align: center;
-  padding: 45px 0 105px;
+  padding: 45px 0 35px;
 
   &__title {
     @extend %title-font;
@@ -93,6 +93,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 30px;
+  padding-bottom: 70px;
 
   &__item {
     position: relative;
