--- a/dev/styles/layout/_header.scss
+++ b/dev/styles/layout/_header.scss
@@ -31,6 +31,20 @@
     line-height: 22px;
     color: rgba(54, 56, 56, 0.90);
   }
+  &__list-link--active{
+    padding-bottom: 4px;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 2px;
+      border-radius: 1px;
+      background-color: rgba($title, .7);
+    }
+  }
 }
 .rightside-menu{
   position: absolute;
