--- a/dev/styles/components/breadcrumbs.scss
+++ b/dev/styles/components/breadcrumbs.scss
@@ -1,7 +1,9 @@
 
 .breadcrumbs{
+  position: relative;
+  z-index: 999;
   padding: 13px 14px;
-  background: rgba(#DFDFDF, .5);
+  background: rgba(#DFDFDF, .7);
   &__list{
     display: flex;
   }
