--- a/dev/styles/pages/_main-page.scss
+++ b/dev/styles/pages/_main-page.scss
@@ -307,6 +307,16 @@
     max-height: 1148px;
     object-fit: cover;
   }
+  &.gallery-page{
+    .gallery__item img{
+      max-height: 1165px;
+    }
+    .gallery__item:nth-child(8){
+      grid-column: span 2;
+      grid-row: span 2;
+
+    }
+  }
 }
 
 .blog-box {
