--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -24,7 +24,8 @@
 @import
   'pages/main-page',
   'pages/about',
-  'pages/contact';
+  'pages/contact',
+  'pages/blog';
 
 @import
   'themes/default';
