--- a/dev/styles/pages/_blog.scss
+++ b/dev/styles/pages/_blog.scss
@@ -1,20 +1,24 @@
 .blog {
   padding: 60px 0 100px;
+
   &__inner {
     display: flex;
     justify-content: space-between;
   }
-  &__tags{
+
+  &__tags {
     margin-bottom: 50px;
   }
-  &__tags-title{
+
+  &__tags-title {
     margin-bottom: 16px;
     @extend %title-font;
     color: $title;
     line-height: 23px;
     font-size: 16px;
   }
-  &__tags-link{
+
+  &__tags-link {
     display: inline-block;
     color: #8F8D8D;
     font-weight: 600;
@@ -25,13 +29,74 @@
     border: 1px solid rgba(#454647, .5);
     border-radius: 14px;
   }
-  &__social{
+
+  &__social {
     display: flex;
   }
-  &__social-item{
+
+  &__social-item {
     margin-right: 20px;
   }
 
+  &__items {
+    max-width: 730px;
+  }
+
+  &__item {
+    margin-bottom: 80px;
+  }
+
+  &__item-img {
+    max-width: 730px;
+  }
+
+  &__item-info {
+    padding: 25px 0 10px;
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+  }
+
+  &__item-title {
+    @extend %title-font;
+    color: $title;
+    font-size: 24px;
+    line-height: 38px;
+    margin-bottom: 6px;
+  }
+  &__blockquote{
+    background: rgba(223, 223, 223, 0.5);
+    padding: 54px 64px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-weight: 300;
+    font-style: italic;
+    font-size: 24px;
+    line-height: 38px;
+    text-align: center;
+  }
+  &__blockquote-author{
+    font-size: 16px;
+    line-height: 22px;
+    color: $title;
+    @extend %title-font;
+    margin-top: 23px;
+    padding-top: 23px;
+    position: relative;
+    font-style: normal;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 1px;
+      width: 200px;
+      background-color: #6D7278;
+      border-radius: 1px;
+      margin: 0 auto;
+    }
+  }
 }
 
 .aside {
@@ -108,5 +173,31 @@
   &__author{
     color: #A1A1A1;
     font-size: 14px;
+  }
+}
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__list{
+    display: flex;
+  }
+  &__list-item{
+    margin: 0 6px;
+  }
+  &__arrow{
+    margin: 0 6px;
+  }
+  &__arrow--disabled{
+    display: none;
+  }
+  &__list-num{
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+  }
+  &__list-num--actice{
+    color: $title;
   }
 }
